--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,3 +27,10 @@ form[name="products.update"] .product_image {
     background-color: white;
     color: black;
 }
+.panel-body li{
+    list-style: none;
+}
+.panel-success {
+    border-color: #d6e9c6;
+    height: 380px;
+}
