Customize products detail page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,7 +30,7 @@ form[name="products.update"] .product_image {
 .panel-body li{
     list-style: none;
 }
-.panel-success {
+.panel-success1 {
     border-color: #d6e9c6;
     height: 380px;
 }
