--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 img{
     width: 100%;
+    height: 100%;
 }
 
 form[name="products.update"] .product_image {
@@ -32,5 +33,5 @@ form[name="products.update"] .product_image {
 }
 .panel-success1 {
     border-color: #d6e9c6;
-    height: 380px;
+    height: 420px;
 }
