--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@ img{
     width: 100%;
     height: 100%;
 }
+.imgkl{
+    width: 100%;
+    max-height: 100px;
+}
 
 form[name="products.update"] .product_image {
     cursor: pointer;
